--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "nodemon --inspect ./index.js"
   },
+  "engines": {
+    "node": "16.x"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/EquipoCit/express-api.git"
@@ -18,7 +21,11 @@
   "homepage": "https://github.com/EquipoCit/express-api#readme",
   "description": "",
   "dependencies": {
+    "@hapi/boom": "9.1.4",
+    "cors": "2.8.5",
     "express": "4.17.2",
-    "faker": "^5.5.3"
+    "faker": "5.5.3",
+    "helmet": "4.6.0",
+    "joi": "17.5.0"
   }
 }
