--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect ./index.js"
+    "start": "nodemon --inspect ./index.js",
+    "build": "nodemon ./index.js"
   },
   "engines": {
     "node": "16.x"
