--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --inspect ./index.js",
-    "build": "node ./index.js"
+    "dev": "nodemon --inspect ./index.js",
+    "start": "node ./index.js"
   },
   "engines": {
     "node": "14.x"
